[package]
name = "rust_ocr"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_ocr"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.26.0"
base64 = "0.21"
image = "0.25.5"
pdfium-render = "0.8.28"
webp = "0.3.1"


[[bin]]
name = "profiling"
path = "src/profiling.rs"

[target.aarch64-unknown-linux-gnu]
env = { CFLAGS = "-std=gnu99" }